tests/paczka1/small_fuzzy/30518942.err
Error in line 5: tR7JXKfEH7r A468 62,66
Error in line 3: yoNQ S88 35,9
